--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,3 +3,7 @@ DB_LOCAL_URI = mongodb://localhost:27017/Legalhelp
 PORT= 4000
 
 NODE_ENV = DEVELOPMENT
+
+JWT_SECRET = CFGSHBXMSJHBHVJBXDD
+
+JWT_EXPIRES_TIME =7d
