--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
   "author": "emma and godwin",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.11"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.11",
+    "nodemailer": "^6.7.0",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
