--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@kommunicate/kommunicate-chatbot-plugin": "0.0.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -45,5 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://127.0.0.1:4000"
+  "proxy": "http://127.0.0.1:4000"
 }
