--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -6,6 +6,11 @@ NODE_ENV = DEVELOPMENT
 
 JWT_SECRET = CFGSHBXMSJHBHVJBXDD
 
+
 JWT_EXPIRES_TIME =7d
 
 COOKIE_EXPIRES_TIME =7
+
+CLOUDINARY_CLOUD_NAME= emmatechs
+CLOUDINARY_API_KEY= 927729369977336
+CLOUDINARY_API_SECRET= FEgP-uRRNcCfFf9ejMZm7N5i6zk
