--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "emma and godwin",
   "license": "ISC",
   "dependencies": {
+    "@kommunicate/kommunicate-chatbot-plugin": "0.0.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.27.1",
