--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,12 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "mdbreact": "^5.2.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.0.0",
-    "react-dom": "^17.0.2", 
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
@@ -46,8 +47,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  
   },
   "proxy": "http://127.0.0.1:4000"
- 
 }
