--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-fileupload": "^1.2.1",
     "file-upload": "0.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.11",
     "nodemailer": "^6.7.0",
     "validator": "^13.6.0"
