--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -14,3 +14,10 @@ COOKIE_EXPIRES_TIME =7
 CLOUDINARY_CLOUD_NAME= emmatechs
 CLOUDINARY_API_KEY= 927729369977336
 CLOUDINARY_API_SECRET= FEgP-uRRNcCfFf9ejMZm7N5i6zk
+
+# EMAIL ##
+EMAIL_HOST = mail.bluefacestech.com
+EMAIL_PORT = 465
+EMAIL_USER = ushergodwin@bluefacestech.com
+EMAIL_PASSWORD = 6dgJY8U?3@IX
+EMAIL_DEFAULT_RECEIVER = 
