--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "mdbreact": "^5.2.0",
     "moment": "^2.29.1",
+    "nodemailer": "^6.7.3",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
