--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@kommunicate/kommunicate-chatbot-plugin": "0.0.5",
+        "@kommunicate/kommunicate-chatbot-plugin": "^0.0.5",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
@@ -19,8 +19,9 @@
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
         "react-redux": "^7.2.6",
-        "react-router-dom": "^5.3.0",
+        "react-router-dom": "^5.3.4",
         "react-scripts": "4.0.3",
+        "react-toastify": "^8.0.0",
         "redux": "^4.1.1",
         "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.4.0",
