--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "moment": "^2.29.1",
         "mongoose": "^6.0.11",
         "nodemailer": "^6.7.3",
+        "react-toastify": "^9.1.2",
         "validator": "^13.6.0"
     },
     "devDependencies": {
